--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .App {
   display: flex;
+  flex-direction: column;
   height: 100%;
   justify-content: center;
   align-items: center;
+}
+
+.controls {
+  margin-top: 1rem;
+  display: flex;
+}
+
+.controls *:not(:first-child) {
+  margin-left: 1rem;
+}
+
+.italicCheckbox {
+
 }
