--- a/src/components/input.css
+++ b/src/components/input.css
@@ -1,10 +1,10 @@
-input {
+.textInput {
   border: none;
   border-bottom: 1px solid black;
   width: 95%;
 }
 
-input:focus {
+.textInput:focus {
   outline: none;
   border-bottom-width: 2px;
 }
