Add a hack to avoid conent jiggeling when focusing text input

--- a/src/components/input.css
+++ b/src/components/input.css
@@ -3,9 +3,11 @@
   border-bottom: 1px solid black;
   width: 95%;
   text-align: center;
+  padding-bottom: 1px;
 }
 
 .textInput:focus {
   outline: none;
   border-bottom-width: 2px;
+  padding-bottom: 0;
 }
